# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "httpmock_server",
    "httpmock-ui",
    "mock_server_web",
]

# [dependencies]
# poem = {version="1.3.20",features = ["anyhow","static-files","csrf"]}
# bcrypt = "0.12.1"
# chrono = { version = "0.4", features = ["serde"] }
# dotenv = "0.15"
# headers = "0.3"
# clap = { version = "3.0.4", features = ["derive","env"] }
# # jsonwebtoken = "8.0.1"
# lazy_static = "1.4"
# rayon = "1.5"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.75"
# thiserror = "1.0.30"
# anyhow = "1.0.52"
# tokio = { version = "1", features = ["full"] }
# tracing = "0.1"
# tracing-subscriber = "0.3.4"
# uuid = { version = "0.8", features = ["serde", "v4"] }
# validator = { version = "0.14", features = ["derive"] }
# # heed = { version = "0.11.0"}
# reqwest = { version = "0.11.10", features=["json","blocking"]}
# # fake = { version = "2.4",features = ["derive","chrono","http","uuid"]}
# rand = "0.8"
# httpmock="0.6"
# isahc = "1.7.0"