[package]
name = "httpmock_ui"
version = "1.0.0"
edition = "2021"
authors = ["hjamm"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","rlib"]
[features]
# default = ["syntax_highlighting"]

## Enable better syntax highlighting using [`syntect`](https://docs.rs/syntect).
syntax_highlighting = ["syntect"]

[dependencies]
# egui_extras = "0.18.0"
egui = "0.18.1"
# epaint = "0.18.1"
eframe = { version = "0.18.0", features = ["persistence"] }
# nom = "7.1.1" #语法解析
chrono = {version="0.4",features=["wasmbind"]}
# hdrhistogram = "7.5.0" #直方图统计
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0.81"
rust-crypto = "0.2.36"
enum-map = { version = "2", features = ["serde"] }
syntect = { version = "5.0.0", optional = true, default-features = false, features = ["default-fancy"] }
fake = {version="2.5.0", features=["chrono","http","uuid"] }
uuid = {version = "1.1.2", features = [ "v4","fast-rng","macro-diagnostics"]}
rand = "0.8.5"
rfd = "0.9.1"
base64 = "0.13"
log = "0.4"
httpmock_server = {path = "../httpmock_server"}
minijinja = {version="0.17.0",features=["source"]}
# egui_nodes = {version = "0.1.3"}
dotenv_codegen = "0.15.0"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
reqwest = {version="0.11.10",features=["cookies","multipart","json"]}
tokio={version="1.19.2",features=["rt","rt-multi-thread"]}

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
getrandom = {version="0.2.6",features=["js"]}
tracing-wasm = "0.2"
ehttp="0.2"

# [target.x86_64-pc-windows-msvc]
# rustflags = ["-C", "target-feature=+crt-static"]

[profile.release]
opt-level = 2
debug = false
# split-debuginfo = '...'  # Platform-specific.
# debug-assertions = false
# overflow-checks = false
lto = true
# panic = 'unwind'
# incremental = false
# codegen-units = 16
# rpath = false
