[package]
name = "httpmock_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = {version="1.3.32",features=["static-files"]}
tokio  = {version="1.19.2",features=["full"]}
# env_logger = { version = "0.9" }
log = "0.4"
tracing = {version="0.1.35"}
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
serde_urlencoded = "0.7.0"
lazy_static = "1.4"
regex = "1.5.5"
smallvec = "1.6.1"
thiserror = "1.0.30"
similar = "2.1.0"
chrono = {version="0.4",features=["wasmbind"]}
levenshtein = "1.0"
# form_urlencoded = "1.0"
# assert-json-diff = "2.0"
reqwest = {version="0.11.11"}
base64 = "0.13.0"
async-trait = "0.1.56"
# async-object-pool = "0.1"
# crossbeam-utils = "0.8"
# futures-util = "0.3"
fake = {version="2.5.0", features=["chrono","http","uuid"] }
uuid = {version = "1.1.2", features = [ "v4","fast-rng","macro-diagnostics"]}
rand = "0.8.5"
minijinja = {version="0.17.0",features=["source","builtins"]}
rust-crypto = "0.2.36"

[[bin]]
name = "httpmock_server"

[profile.release]
opt-level = 2
debug = false
# split-debuginfo = '...'  # Platform-specific.
# debug-assertions = false
# overflow-checks = false
lto = true
# panic = 'unwind'
# incremental = false
# codegen-units = 16
# rpath = false
